--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ wandb
 Guided Transfer Learning-DevTech/guided_transfer_learning_library/src/guided_transfer_learning/__pycache__/AdjustGuidanceMatrix.cpython-311.pyc
 Guided Transfer Learning-DevTech/guided_transfer_learning_library/raw_guidance_matrix(reference) copy.pt
 Guided Transfer Learning-DevTech/guided_transfer_learning_library/gtl_base_model.pt
+Guided Transfer Learning-DevTech/guided_transfer_learning_library/raw_guidance_matrix_2unfrozenlayers.pt
