--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Guided Transfer Learning-DevTech/guided_transfer_learning_library/gtl_base_model
 Guided Transfer Learning-DevTech/guided_transfer_learning_library/raw_guidance_matrix_2unfrozenlayers.pt
 Guided Transfer Learning-DevTech/guided_transfer_learning_library/raw_guidance_matrix_3unfrozenlayers.pt
 Guided Transfer Learning-DevTech/guided_transfer_learning_library/raw_guidance_matrix_3unfrozenlayers(reference).pt
+Guided Transfer Learning-DevTech/guided_transfer_learning_library/raw_guidance_matrix_2unfrozenlayers(reference).pt
